# cursor-rules-testing

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.cursor/: gitlab-ci.mdc  project-specific-rules.mdc  terraform-vpc-aws.mdc
pytonator/: __init__.py  config.py  main.py  routes.py
tests/integration/: test_api.py
tests/unit/: test_main.py
